<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">

<!--        forget password-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_72"
            android:layout_marginEnd="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_upper_body"
            app:fontFamily="@font/sans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_view_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- create account  label ! -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_72"
            android:layout_marginEnd="@dimen/margin_72"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_body"
            app:fontFamily="@font/sans_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/text_view_phone"
            app:layout_constraintTop_toBottomOf="@+id/text_view_forgot" />


        <!--  phone Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_view_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_8"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorText"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_reset">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:textColorHint="@color/colorText"
                android:text="@string/_987_568987"
                android:backgroundTint="@color/colorTint"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_body"
                android:hint="@string/phone"

                app:fontFamily="@font/sans_regular" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>